--- a/src/paysure.html
+++ b/src/paysure.html
@@ -21,13 +21,13 @@
             <div
                 class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny xl:text-xs">
+                    <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
                         <a href="index.html">OZENUA OLUWATOBI</a>
                     </p>
                 </div>
 
-                <div class="navlist hidden lg:block lg:w-60 xl:w-72">
-                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs">
+                <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
+                    <ul class="flex justify-between items-center text-center lg:text-tiny xl:text-xs 2xl:text-sm">
                         <li><a href="#">CONTACT ME</a></li>
                         <li><a href="#">CASES</a></li>
                         <li><a href="#">RESUME</a></li>
@@ -49,13 +49,13 @@
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
             <p
-                class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl">
+                class="header-text -black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 Pay sure
             </p>
 
             <div class="case-studies w-full flex items-center py-5 sm:py-6 lg:py-7">
                 <ul
-                    class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg text-primary flex justify-between align-center">
+                    class="case-study-list font-sf w-full text-xs sm:text-sm lg:text-base xl:text-lg 2xl:text-xl text-primary flex justify-between align-center">
                     <li>UX Reasearch</li>
                     <li>UI Design</li>
                     <li>Visual Design</li>
@@ -65,27 +65,27 @@
         </section>
 
         <section class="crptly mt-10">
-            <div class="overview space-y-5 sm:space-y-6">
+            <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </p>
 
                 <p
-                    class="overview-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8">
+                    class="overview-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Pay sure is a uitility payment playform that brings daily life expenses and transactions close to
                     its users. It provides
                     a seamless means of taking care of recurring bills and expenses.
                 </p>
             </div>
 
-            <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="the-problem mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     The problem
                 </p>
 
                 <p
-                    class="the-problem-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10">
+                    class="the-problem-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10">
                     Keeping up with expenses could be very painstaking due to the number of needs we have in our daily
                     life, it is only
                     important that there are easier ways to both manage and cater for these needs without been caught
@@ -94,18 +94,18 @@
                 </p>
             </div>
 
-            <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="goals mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Goals
                 </p>
 
                 <ol
-                    class="list-decimal ml-4 font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:ml-5">
+                    class="list-decimal ml-4 font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:ml-5">
                     <li>Create an all in one payment platform for all bills and expenses.</li>
                     <li>Design a more user friendly design that top competition.</li>
                 </ol>
             </div>
 
-            <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Design
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="userflow mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     User flow</p>
 
@@ -128,14 +128,14 @@
                 </div>
             </div>
 
-            <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="wireframes mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Wireframes
                 </p>
 
                 <p
-                    class="wireframes-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:mb-7">
+                    class="wireframes-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I created
                     High-Fidelity wireframes using some dummy texts and icons where needed.
@@ -153,14 +153,14 @@
                 </div>
             </div>
 
-            <div class="colors-and-typography mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="colors-and-typography mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="colors-and-typography-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Colors and
                     Typography</p>
 
                 <p
-                    class="colors-and-typography-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:mt-10 lg:mb-7">
+                    class="colors-and-typography-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential testers of the app. I proceeded to design a simple design style guide for the application.
                 </p>
@@ -177,14 +177,14 @@
                 </div>
             </div>
 
-            <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6">
+            <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual
                     Design</p>
 
                 <p
-                    class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8">
+                    class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
@@ -200,14 +200,14 @@
                 </div>
             </div>
 
-            <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6">
+            <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </p>
 
                 <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg sm:leading-6 lg:leading-7 xl:leading-8 lg:my-8">
+                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
                     made to be minimal, well organized flows, and feature centered to meet the users needs. As a result,
@@ -220,26 +220,27 @@
         </section>
     </div>
 
-    <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 mt-24">
+    <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
                 class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <p
-                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl">
+                        class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
                         Got an idea?
                     </p>
-    
+
                     <p>
-                        <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl"
+                        <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
                             href="#">
                             Let's talk about it.
                         </a>
                     </p>
                 </div>
-    
-                <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base">
+
+                <div
+                    class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
                     <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center">
                         <a class="instagram-footer-link" href="#">Instagram</a>
                         <a class="youtube-footer-link" href="#">Youtube</a>
