--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,8 @@
         </p>
 
         <!-- Hero header for big screens -->
-        <p class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl xl:text-8xl 2xl:text-10xl text-left tracking-tight">
+        <p
+          class="hero-header-text hidden md:block font-caudex dark:text-white lg:font-normal md:text-6xl lg:text-7xl xl:text-8xl 2xl:text-10xl text-left tracking-tight">
           Hey, I'm Ozenua.
         </p>
 
@@ -88,7 +89,8 @@
             </div>
           </div>
 
-          <p class="hero-details-text font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-10 md:w-3/5 2xl:pr-5">
+          <p
+            class="hero-details-text font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-9 2xl:leading-10 md:w-3/5 2xl:pr-5">
             I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
@@ -268,7 +270,8 @@
 
         <!-- Scroll, text and floating svg for small screens -->
         <div class="scroll-and-text lg:w-2/3 mt-5 lg:mt-5 md:hidden justify-between items-center">
-          <p  class="hero-details-text font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
+          <p
+            class="hero-details-text font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
             I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
@@ -472,9 +475,11 @@
     </section>
 
     <section class="featured-projects py-16 lg:py-20 xl:py-24 font-normal" id="featured-projects">
-      <p class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
+      <p class="font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-widest dark:text-white">FEATURED
+        PROJECTS</p>
 
-      <p class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
+      <p
+        class="projects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
         PROJECTS
       </p>
 
@@ -563,7 +568,8 @@
             online design community builder
           </p>
 
-          <p class="bottom text-sm sm:text-base md:text-lg xl:text-lg3xl 2xl:text-4xl text-primary lg:leading-7 xl:leading-10 2xl:leading-snug lg:pt-3">
+          <p
+            class="bottom text-sm sm:text-base md:text-lg xl:text-lg3xl 2xl:text-4xl text-primary lg:leading-7 xl:leading-10 2xl:leading-snug lg:pt-3">
             I have also contributed immensely to the online design
             community with asset files, online videos and articles.
           </p>
@@ -581,19 +587,23 @@
 
   <section class="contributions py-16 lg:py-20 xl:py-28 2xl:py-36" id="contributions">
     <div class="container mx-auto overflow-x-hidden pl-7 sm:pl-14 md:pl-16 lg:pl-24 xl:pl-28 2xl:pl-32">
-      <p class="contribution-header-text font-sf text-xs lg:text-sm xl:text-base 2xl:text-xl lg:tracking-widest dark:text-white">
+      <p
+        class="contribution-header-text font-sf text-xs lg:text-sm xl:text-base 2xl:text-xl lg:tracking-widest dark:text-white">
         CONTRIBUTIONS
       </p>
 
-      <p class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl md:tracking-tighter sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 text-light dark:text-dark">
+      <p
+        class="contribution-text font-caudex text-5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl md:tracking-tighter sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 text-light dark:text-dark">
         CONTRIBUTIONS
       </p>
 
-      <div class="grid-div overflow-x-hidden w-full flex-nowrap mt-10 lg:mt-16 space-y-7 md:space-y-0 md:flex justify-between md:space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0">
-        <div class="presently md:min-w-4 lg:min-w-min">
-          <div class="presently-container md:w-80 lg:w-84 xl:w-96 2xl:w-100 p-7 lg:p-7 xl:p-10">
+      <div
+        class="grid-div overflow-x-hidden w-full flex-nowrap mt-10 lg:mt-16 space-y-7 md:space-y-0 md:flex justify-between md:space-x-10 lg:space-x-24 pr-7 sm:pr-14 md:pr-0">
+        <div class="presently md:min-w-4 lg:min-w-min 2xl:min-w-1/3">
+          <div class="presently-container md:w-80 lg:w-84 xl:w-96 p-7 lg:p-7 xl:p-10 2xl:py-16 2xl:pl-16 2xl:pr-0">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -603,16 +613,19 @@
               </svg>
             </a>
 
-            <p class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
+            <p
+              class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl 2xl:text-5xl mt-5 lg:mt-10 dark:text-white">
               Presently
             </p>
 
-            <p class="presently-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p
+              class="presently-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-base mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-0 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+            <p
+              class="open-in-figma-link text-xs xl:text-sm 2xl:text-base mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -625,10 +638,11 @@
           </div>
         </div>
 
-        <div class="memoji md:min-w-4 lg:min-w-min">
-          <div class="memoji-container md:w-80 lg:w-84 xl:w-96 lg:h-72 p-7 lg:p-7 xl:p-10">
+        <div class="memoji md:min-w-4 lg:min-w-min 2xl:min-w-1/3">
+          <div class="memoji-container md:w-80 lg:w-84 xl:w-96 p-7 lg:p-7 xl:p-10 2xl:py-16 2xl:pl-16 2xl:pr-0">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -638,16 +652,19 @@
               </svg>
             </a>
 
-            <p class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
+            <p
+              class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl 2xl:text-5xl mt-5 lg:mt-10 dark:text-white">
               Memoji
             </p>
 
-            <p class="memoji-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p
+              class="memoji-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-base mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-0 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+            <p
+              class="open-in-figma-link text-xs xl:text-sm 2xl:text-base mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -660,10 +677,11 @@
           </div>
         </div>
 
-        <div class="desktop-mockup md:min-w-4 lg:min-w-min">
-          <div class="desktop-mockup-container md:w-80 lg:w-84 xl:w-96 lg:h-72 p-7 lg:p-7 xl:p-10">
+        <div class="desktop-mockup md:min-w-4 lg:min-w-min 2xl:min-w-3/4">
+          <div class="desktop-mockup-container md:w-80 lg:w-84 xl:w-96 p-7 lg:p-7 xl:p-10 2xl:py-16 2xl:pl-16 2xl:pr-0">
             <a href="#">
-              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-3 sm:w-4 lg:w-5 xl:w-7 2xl:w-9" viewBox="0 0 28 28" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M29.0208 25.2909C29.8837 25.2909 30.5833 24.5914 30.5833 23.7284L30.5832 4.97848C30.5832 4.11553 29.8837 3.41598 29.0207 3.41598L10.2708 3.41598C9.40784 3.41598 8.70828 4.11553 8.70828 4.97848C8.70828 5.84142 9.40784 6.54098 10.2708 6.54098L25.2485 6.54098L3.9576 27.8319C3.3474 28.4421 3.3474 29.4314 3.9576 30.0416C4.56779 30.6518 5.55711 30.6518 6.16731 30.0416L27.4582 8.75068L27.4583 23.7284C27.4583 24.5914 28.1578 25.2909 29.0208 25.2909Z"
                   fill="#2D2D2F" style="opacity: 0.5;" />
@@ -673,16 +691,19 @@
               </svg>
             </a>
 
-            <p class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl mt-5 lg:mt-10 dark:text-white">
+            <p
+              class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl xl:text-base4xl 2xl:text-5xl mt-5 lg:mt-10 dark:text-white">
               Desktop Mockup
             </p>
 
-            <p class="desktop-mockup-details-text font-sf text-primary text-xs xl:text-sm mt-2 lg:mt-4 sm:pr-16 md:pr-0 lg:pr-10 leading-5">
+            <p
+              class="desktop-mockup-details-text font-sf text-primary text-xs xl:text-sm 2xl:text-base mt-2 lg:mt-4 2xl:mt-6 sm:pr-16 md:pr-0 lg:pr-10 2xl:pr-0 leading-5">
               I have also contributed immensely to the online design community with
               asset files, online videos and articles.
             </p>
 
-            <p class="open-in-figma-link text-xs xl:text-sm mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
+            <p
+              class="open-in-figma-link text-xs xl:text-sm 2xl:text-base mt-3 lg:mt-5 xl:mt-7 flex items-center space-x-2">
               <a href="#" class="open-in-figma-text font-sf text-primary">Open in Figma</a>
               <a href="#" class="">
                 <svg class="w-2 lg:w-3" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -701,26 +722,40 @@
   <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-28 2xl:px-32">
     <section class="more-on-youtube lg:w-full py-10 lg:py-20" id="more-on-youtube">
 
-      <p class="uppercase font-sf text-xs lg:text-sm xl:text-base lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
+      <p
+        class="uppercase font-sf text-xs lg:text-sm xl:text-base 2xl:text-lg lg:tracking-wider lg:mb-7 dark:text-white">
+        more on
+        youtube...
+      </p>
 
-      <div class="div overflow-hidden relative lg:h-48 xl:h-56 flex justify-between xl:space-x-10 md:items-center mt-5">
+      <div
+        class="div overflow-hidden relative lg:h-48 xl:h-56 2xl:h-64 flex justify-between xl:space-x-10 md:items-center mt-5">
         <!-- Blocks for big screens -->
         <div class="blocks hidden md:flex items-center md:-ml-10 xl:-ml-12">
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-10"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-80 xl:h-88 md:-mb-40 md:-mt-28 lg:mb-0 lg:mt-0 md:ml-16 md:mr-8 lg:ml-20 lg:mr-6 xl:ml-24 xl:mr-10"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-32"></div>
+          <div
+            class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 2xl:h-48 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-10">
+          </div>
+          <div
+            class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-80 xl:h-88 2xl:h-96 md:-mb-40 md:-mt-28 lg:mb-0 lg:mt-0 md:ml-16 md:mr-8 lg:ml-20 lg:mr-6 xl:ml-24 xl:mr-10">
+          </div>
+          <div
+            class="rotated-block bg-gray-200 dark:bg-darkblock md:w-16 xl:w-20 md:h-32 xl:h-40 2xl:h-48 md:-mb-48 md:-mt-20 lg:mb-0 lg:mt-32">
+          </div>
         </div>
 
         <div class="texts py-5 sm:py-7 lg:py-3 xl:py-6 px-5 sm:px-7 lg:px-0 md:w-1/2 md:mr-5 lg:mr-10 z-50">
-          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg md:text-2xl lg:text-3xl xl:text-base4xl dark:text-white">
+          <p
+            class="name capitalize font-caudex font-semibold text-base sm:text-lg md:text-2xl lg:text-3xl xl:text-base4xl 2xl:text-5xl dark:text-white">
             ozenua oluwatobi john
           </p>
 
-          <p class="details font-sf text-primary py-2 lg:py-2 xl:py-4 text-xs lg:text-sm xl:text-base leading-5 lg:leading-6 xl:pr-28">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor sint. Velit officia consequat duis enim velit mollit.
+          <p
+            class="details font-sf text-primary py-2 lg:py-2 xl:py-4 text-xs lg:text-sm xl:text-base 2xl:text-lg leading-5 lg:leading-6 2xl:leading-8 xl:pr-28">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor sint. Velit officia consequat duis enim velit
+            mollit.
           </p>
 
-          <p class="subscribe text-xs lg:text-sm xl:text-base"><a href="#">Subscribe</a></p>
+          <p class="subscribe text-xs lg:text-sm xl:text-base 2xl:text-lg"><a href="#">Subscribe</a></p>
         </div>
 
         <!-- Blocks for small screens -->
@@ -736,22 +771,26 @@
     </section>
   </div>
 
-  <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 mt-24">
+  <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
     <div class="container mx-auto px-4 sm:px-8">
-      <div class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
-        <div class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
-          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl">
+      <div
+        class="first-container md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+        <div
+          class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
+          <p
+            class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
             Got an idea?
           </p>
 
           <p>
-            <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl" href="#">
+            <a class="lets-talk font-sf text-black dark:text-white text-base sm:text-xl lg:text-xl xl:text-3xl 2xl:text-4xl"
+              href="#">
               Let's talk about it.
             </a>
           </p>
         </div>
 
-        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base">
+        <div class="contacts font-sf md:w-2/4 text-black dark:text-white text-xs lg:text-sm xl:text-base 2xl:text-lg">
           <div class="grid grid-cols-4 gap-y-3 xl:gap-y-7 text-xs lg:text-base items-center">
             <a class="instagram-footer-link" href="#">Instagram</a>
             <a class="youtube-footer-link" href="#">Youtube</a>
@@ -767,7 +806,7 @@
   </footer>
 
 
-  <div id="cursor" class="cursor invisible lg:visible bg-black dark:bg-white">
+  <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
