--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,54 @@
       <div
         class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo">
-          <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
-            <a href="index.html">OZENUA OLUWATOBI</a>
-          </p>
+          <a class="flex" href="index.html">
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              O
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              Z
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              E
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              N
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              U
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              A
+            </p>
+
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
+              O
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              L
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              U
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              W
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              A
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              T
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              O
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              B
+            </p>
+            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+              I
+            </p>
+          </a>
         </div>
 
         <div class="navlist hidden lg:block lg:w-60 xl:w-72 2xl:w-84">
@@ -96,8 +141,8 @@
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
           </p>
 
-          <div class="floating-circle flex justify-center items-center md:mb-10 lg:mb-20">
-            <svg class="md:w-32 xl:w-40 2xl:w-56" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div class="floating-circle relative flex  md:mb-10 lg:mb-20">
+            <svg class="md:w-32 xl:w-40 2xl:w-56 animate-spin" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M42.8722 169.863L43.4213 170.311L39.8269 174.713L37.1547 172.531L37.5583 172.036L39.6814 173.77L40.9168 172.257L38.9676 170.665L39.3662 170.177L41.3154 171.769L42.8722 169.863Z"
                 fill="#454545" />
@@ -261,6 +306,9 @@
                 d="M156.085 169.661C156.194 169.575 156.32 169.539 156.462 169.553C156.604 169.571 156.718 169.634 156.805 169.743C156.893 169.854 156.929 169.98 156.913 170.12C156.895 170.262 156.832 170.376 156.723 170.463C156.612 170.551 156.487 170.587 156.346 170.571C156.206 170.555 156.092 170.492 156.004 170.381C155.917 170.272 155.881 170.146 155.895 170.004C155.911 169.864 155.974 169.75 156.085 169.661Z"
                 fill="#454545" />
               <circle cx="99.008" cy="96.2397" r="66.1081" stroke="#454545" stroke-width="0.288053" />
+            </svg>
+
+            <svg class="absolute md:w-32 xl:w-40 2xl:w-56" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M105.409 99.9586C105.813 99.9586 106.14 99.6312 106.14 99.2272L106.14 90.4504C106.14 90.0465 105.813 89.719 105.409 89.719L96.6321 89.719C96.2282 89.719 95.9007 90.0465 95.9007 90.4504C95.9007 90.8543 96.2282 91.1818 96.6321 91.1818L103.643 91.1818L93.6769 101.148C93.3913 101.434 93.3913 101.897 93.6769 102.182C93.9626 102.468 94.4257 102.468 94.7113 102.182L104.678 92.2162L104.678 99.2272C104.678 99.6312 105.005 99.9587 105.409 99.9586Z"
                 fill="#2D2D2F" />
@@ -484,13 +532,14 @@
       </p>
 
       <div class="scroll-and-projects flex justify-between mt-16 lg:pt-20 lg:pb-20">
-        <div class="vert relative md:h-56 2xl:h-86 md:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
-          <div class="inner-vert absolute top-0 md:h-28 2xl:h-40 md:w-px 2xl:w-1 bg-black dark:bg-white"></div>
+        <div class="vert relative h-40 md:h-56 2xl:h-86 w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
+          <div class="inner-vert absolute top-0 h-20 md:h-28 2xl:h-40 w-px 2xl:w-1 bg-black dark:bg-white"></div>
         </div>
 
         <div class="projects space-y-10 xl:space-y-28 2xl:space-y-36 sm:space-y-14 w-3/4">
           <div class="jumiar lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">01</p>
+            <p class="num font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">01
+            </p>
 
             <p
               class="juimar-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
@@ -506,7 +555,8 @@
           </div>
 
           <div class="gtworld lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">02</p>
+            <p class="num font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">02
+            </p>
 
             <p
               class="gtworld-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
@@ -522,7 +572,8 @@
           </div>
 
           <div class="crptly lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">03</p>
+            <p class="num font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">03
+            </p>
 
             <p
               class="crptly-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
@@ -538,7 +589,8 @@
           </div>
 
           <div class="paysure lg:mb-0">
-            <p class="num font-caudex text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">04</p>
+            <p class="num font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">04
+            </p>
 
             <p
               class="paysure-header-text font-caudex my-2 md:pb-3 lg:pb-5 text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white">
@@ -751,8 +803,7 @@
 
           <p
             class="details font-sf text-primary py-2 lg:py-2 xl:py-4 text-xs lg:text-sm xl:text-base 2xl:text-lg leading-5 lg:leading-6 2xl:leading-8 xl:pr-28">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor sint. Velit officia consequat duis enim velit
-            mollit.
+            Learn to create great designs and scale your design career on my channel where I share helpful design tips.
           </p>
 
           <p class="subscribe text-xs lg:text-sm xl:text-base 2xl:text-lg"><a href="#">Subscribe</a></p>
