--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -119,9 +119,9 @@
                     its platform to further increase the user experience.
                 </p>
 
-                <div class="why-jumia-image w-full pt-5 lg:mt-10 lg:mb-32">
-                    <a data-lightbox="mygallery" href="../assets/images/gt case study.png"><img
-                            class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/gt case study.png"
+                <div class="why-jumia-image pt-5 lg:mt-10 lg:mb-32">
+                    <a data-lightbox="mygallery" href="../assets/images/Rectangle 5 (11).png"><img
+                        class="rounded-2xl lg:rounded-3xl" src="../assets/images/Rectangle 5 (11).png"
                             alt=""></a>
                 </div>
 
@@ -447,15 +447,15 @@
     </footer>
 
 
-    <div id="cursor" class="cursor invisible lg:visible bg-black dark:bg-white">
-    </div>
+    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
-        integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script type="module" src="js/index.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
+            integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+        <script type="module" src="js/index.js"></script>
 
 </body>
 
