--- a/src/crptly.html
+++ b/src/crptly.html
@@ -441,12 +441,12 @@
         </div>
     </footer>
 
-    <div id="cursor" class="cursor invisible lg:visible bg-black dark:bg-white">
-    </div>
+    <div id="cursor" class="cursor invisible lg:visible before:bg-black dark:before:bg-white">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script type="module" src="js/index.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+        <script type="module" src="js/index.js"></script>
 
 </body>
 
