--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -120,9 +120,9 @@
                 </p>
 
                 <div class="why-jumia-image pt-5 lg:mt-10 lg:mb-32">
-                    <a data-lightbox="mygallery" href="../assets/images/Rectangle 5 (11).png"><img
+                    <!-- <a data-lightbox="mygallery" href="../assets/images/Rectangle 5 (11).png"><img
                         class="rounded-2xl lg:rounded-3xl" src="../assets/images/Rectangle 5 (11).png"
-                            alt=""></a>
+                            alt=""></a> -->
                 </div>
 
                 <p
